# QUICKCOM_POC

./: .gitattributes  .gitignore  README.md
.devcontainer/: devcontainer.json  docker-entrypoint.sh  dockerfile
.github/workflows/: build.yml
Examples/: README.md
Examples/SpeedLimitMonitor/Cpp/SpeedLimitWarningApplication/: CMakeLists.txt  LocalPaths.cmake
Examples/SpeedLimitMonitor/Cpp/SpeedLimitWarningApplication/include/: executable_controller_base.h
Examples/SpeedLimitMonitor/Cpp/SpeedLimitWarningApplication/src/SpeedMonitorExecutable/: CMakeLists.txt  main.cpp  pport_speedlimit_service_provider.cpp  pport_speedlimit_service_provider.h  speedlimit_controller.cpp  speedlimit_controller.h
Examples/SpeedLimitMonitor/Cpp/SpeedLimitWarningApplication/src/WarningDisplayExecutable/: CMakeLists.txt  main.cpp  rport_speedlimit_service_client.cpp  rport_speedlimit_service_client.h  warningdisplay_controller.cpp  warningdisplay_controller.h  warningdisplay_processor.cpp  warningdisplay_processor.h
Examples/SpeedLimitMonitor/Cpp/SpeedLimitWarningApplication/src/common/: executable_controller_base.cpp
Examples/SpeedLimitMonitor/Model/Config/: SpeedLimitMonitorApplication.json
Examples/SpeedLimitMonitor/scripts/: 1_runGenerators.sh  2_buildApplication.sh  3_runApplicationClient.sh  3_runApplicationServer.sh  3a_runIPCDaemon.sh  3b_runSomeIPDaemon.sh  clean.sh
ModelBuilder/schema/: quickcom.schema.json
SDK/BSW/amsr-vector-fs-applicationbase/mex/: CryptoMexDefsExecutable.arxml  MexDefBswDefaultResource.arxml  MexDefBswExecutableType.arxml  MexDefBswInitDeinit.arxml  MexDefBswLowerGradeQualityLevel.arxml  MexDefBswSteadyMode.arxml  MexDefBswVersionedApi.arxml  MexDefExternalIpc.arxml  MexDefLogConfig.arxml  PhmMexDefsExecutable.arxml  SmMexDefsExecutable.arxml
SDK/BSW/amsr-vector-fs-araidsm/mex/: MexDefsAraIdsmConfig.arxml  MexDefsAraIdsmPorts.arxml  MexDefsAraIdsmSwcServiceDependency.arxml
SDK/BSW/amsr-vector-fs-comtrace/mex/: MexDefComTrace.arxml
SDK/BSW/amsr-vector-fs-ipcbinding/mex/: MexDefIpcBindingDeployment.arxml
SDK/BSW/amsr-vector-fs-log-api/mex/: MexDefLoggingConfig.arxml
SDK/BSW/amsr-vector-fs-sec-cryptostack/mex/: MexCustomCryptoProviderMapping.arxml
SDK/BSW/amsr-vector-fs-socal/mex/: SocalExecutableModelExtension.arxml  SocalProcessModelExtension.arxml
SDK/BSW/amsr-vector-fs-someipbinding/mex/: ExtendedMachineMapping.arxml  MexDefIpcEndpoint.arxml  MixedSdModelExtension.arxml  NetworkEndpointExtension.arxml  SignalbasedModelExtension.arxml  SomeIpDaemonClientProcessModelExtension.arxml  SomeIpTpBurstSizeExtension.arxml  SomeIpTpExtension.arxml  SomeipServiceInstanceToMachineMappingExtension.arxml  TlsCryptoCipherSuiteExtension.arxml  TlsSecureComPropsExtension.arxml
SDK/BSW/amsr-vector-fs-someipprotocol/mex/: ApSomeipTransformationProps.arxml
SDK/BSW/amsr-vector-fs-thread/mex/: MexDefBswThreadConfig.arxml
SDK/BSW/amsr-vector-fs-zerocopybinding/mex/: MexDefZeroCopyBinding.arxml
SDK/CLI/Core/: DVACfgCmd.ini  artifacts.xml
SDK/CLI/Core/DvACliProjectInformation/: DvACliProjectInformation  DvACliProjectInformation.bat
SDK/CLI/Core/Licenses/: License.txt  License_spdx.json
SDK/CLI/Core/configuration/: config.ini
SDK/CMake/Toolchain/: gcc11_linux_x86_64.cmake
SDK/include/: ComStack_Cfg.h  ComStack_Types.h  Compiler.h  Compiler_Cfg.h  Crc.h  Crc_Cfg.h  Crc_Tables.h  ESLib.h  ESLib_ERC.h  ESLib_EdDSA_Helper.h  ESLib_Helper.h  ESLib_RSA_Common.h  ESLib_SPAKE2PConstants.h  ESLib_t.h  ESLib_types.h  MemMap.h  MemMap_Common.h  Platform_Types.h  Std_Types.h  act25519util.h  act448util.h  actBigNum.h  actConfig.h  actECCheckKey.h  actECTools.h  actEd25519core.h  actEd448core.h  actEdCheckKey.h  actEdDSA.h  actHashFctWrappers_Implementation.h  actHashMACWrappers_int.h  actIECCheckKey.h  actIEdCheckKey.h  actIEdDSA.h  actIHashMAC.h  actIHashMACRMD160.h  actIHashMACSHA256.h  actIHashMACSHA384.h  actIHashMACSHA512.h  actIKDFX963.h  (+16 more)
SDK/include/amsr/: abort_on_error_resource.h  container_error_domain.h  log_fwd.h  map.h  pool_resource.h  shared_ptr.h  shared_ptr_resource.h  unique_ptr.h  vector.h
SDK/include/amsr/application_base/: initialization_error_domain.h
SDK/include/crc/: crc.h
SDK/include/osabstraction/: osab_error_domain.h
SDK/include/someip_tp/: someip_tp.h  someip_tp_assembler_client.h  someip_tp_assembler_slot.h  someip_tp_copy_operation.h  someip_tp_header.h  someip_tp_message_segmentizer.h  someip_tp_offset.h  someip_tp_reception_assembler.h  someip_tp_reception_controller.h  someip_tp_segment.h  someip_tp_segmentation_manager.h  someip_tp_segmented_iteration.h  someip_tp_types.h  someip_tp_validation.h
(+2688 files in other folders)
